Fixed Header sizing on mobile

--- a/react-code/src/App.css
+++ b/react-code/src/App.css
@@ -56,3 +56,13 @@
 .Nav-Links {
   padding-left: 40vw;
 }
+
+@media (max-width: 768px) {
+  .Nav-Links {
+    padding-left: 0;
+  }
+
+  .Link {
+    padding-left: 45px;
+  }
+}
