--- a/react-code/src/Home.css
+++ b/react-code/src/Home.css
@@ -21,7 +21,7 @@
 @media (max-width: 768px) {
     .Home{
         flex-direction: column;
-        padding-left: 0;
+        padding: 4px;
     }
 
     .col1{
@@ -30,7 +30,7 @@
 
     .profile-pic{
         padding-top: 5vh;
-        height: 50vh;
+        height: 40vh;
         order: 2;
     }
 }
